--- a/SuperElizabethSis/bin/.gitignore
+++ b/SuperElizabethSis/bin/.gitignore
@@ -1,10 +1,1 @@
-/boladefuego.gif
-/fondonubes.gif
-/obstaculo.jpg
-/piso.png
-/princesa.gif
-/soldado.gif
-/juego/
-/gameover.jpg
-/nube.png
-/fondonubes.jpg
+/.gitignore
